Fix CORS for Hostinger frontend